# MySQLCXX

./: .clang-format  CMakeLists.txt  README.md
include/: mysqlcxx.h
src/: mysqlcxx.cpp
tests/: CMakeLists.txt  mysqlcxx_test.cpp
